# gedit-clone

./: README.md  meson.build  org.gnome.geditclone.json
data/: meson.build  org.gnome.geditclone.appdata.xml.in  org.gnome.geditclone.desktop.in  org.gnome.geditclone.gschema.xml
po/: POTFILES  meson.build
src/: application.vala  geditclone.gresource.xml  main.vala  meson.build  window.vala
